--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "version": "0.0.0",
   "author": "Rob Brennan <rob@therobbrennan.com> (therobbrennan.com)",
   "description": "A starting point to explore GraphQL",
+  "scripts": {
+    "start": "npm run docker:up",
+    "docker:up": "docker-compose up -d && docker-compose logs -f",
+    "docker:up:clean": "docker-compose up --remove-orphans --build -d && docker-compose logs -f",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f",
+    "docker:nuke": "npm run docker:nuke:containers && docker rmi -f $(docker images -q)",
+    "docker:nuke:containers": "docker rm $(docker ps -aq)",
+    "docker:refresh": "npm run docker:down && npm run docker:up",
+    "docker:refresh:clean": "npm run docker:down && npm run docker:up:clean"
+  },
   "keywords": [
     "graphql"
   ],
