Minor update to example path for optionally persisting MongoDB data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,6 @@ services:
       - MONGO_LOG_DIR=/dev/null
     # If you want to persist MongoDB data after a container has been stopped/deleted, uncomment the volumes section
     # volumes:
-    #   - ./mongodb/data/db:/data/db
+    #   - ./local/path/to/data/db:/data/db
     ports:
       - "27017:27017"
