--- a/docker-compose.apollo-tutorial.yml
+++ b/docker-compose.apollo-tutorial.yml
@@ -20,22 +20,8 @@ services:
       context: ./back-end/javascript/apollo-server/apollo-tutorial
       dockerfile: ./Dockerfile
     container_name: 'apollo-tutorial-server'
-    # This service will not start until either the mongodb service is available OR thirty seconds have elapsed
-    command: sh -c './scripts/wait-for.sh --timeout=30 mongodb:27017 && npx nodemon -e js,json,graphql'
+    # Automatically hot reload code changes in the Docker container
+    command: sh -c 'npx nodemon -e js,json,graphql'
     ports:
       - "4000:4000"
       - "9229:9229"
-    depends_on:
-      - mongodb
-
-  mongodb:
-    image: mongo
-    container_name: "explore-graphql-mongodb"
-    environment:
-      - MONGO_DATA_DIR=/data/db
-      - MONGO_LOG_DIR=/dev/null
-    # If you want to persist MongoDB data after a container has been stopped/deleted, uncomment the volumes section
-    # volumes:
-    #   - ./local/path/to/data/db:/data/db
-    ports:
-      - "27017:27017"
