--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Back-end
 back-end/javascript/apollo-server/apollo-tutorial/node_modules
 back-end/javascript/apollo-server/apollo-tutorial/.env
+back-end/javascript/apollo-server/example-using-mongodb-and-postgresql/node_modules
 
 # Front-end
 front-end/javascript/react/apollo-client/v2.6.x/apollo-tutorial/node_modules
