--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 back-end/javascript/apollo-server/apollo-tutorial/node_modules
 back-end/javascript/apollo-server/apollo-tutorial/.env
 back-end/javascript/apollo-server/example-using-mongodb-and-postgresql/node_modules
+back-end/javascript/apollo-server/example-using-mongodb-and-postgresql/.env
 
 # Front-end
 front-end/javascript/react/apollo-client/v2.6.x/apollo-tutorial/node_modules
