Added scripts to launch Angular example

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "author": "Rob Brennan <rob@therobbrennan.com> (therobbrennan.com)",
   "description": "A starting point to explore GraphQL",
   "scripts": {
-    "start": "npm run docker:apollo-tutorial:up",
+    "start": "npm run docker:apollo-tutorial-angular:up",
     "docker:apollo-tutorial:up": "docker-compose -f docker-compose.apollo-tutorial.yml up",
     "docker:apollo-tutorial:up:clean": "docker-compose -f docker-compose.apollo-tutorial.yml up --remove-orphans --build",
     "docker:apollo-tutorial:down": "docker-compose -f docker-compose.apollo-tutorial.yml down",
+    "docker:apollo-tutorial-angular:up": "docker-compose -f docker-compose.apollo-tutorial-angular.yml up",
+    "docker:apollo-tutorial-angular:up:clean": "docker-compose -f docker-compose.apollo-tutorial-angular.yml up --remove-orphans --build",
+    "docker:apollo-tutorial-angular:down": "docker-compose -f docker-compose.apollo-tutorial-angular.yml down",
     "docker:example-client-server-with-mongodb:up": "docker-compose -f docker-compose.example-client-server-with-mongodb.yml up",
     "docker:example-client-server-with-mongodb:up:clean": "docker-compose -f docker-compose.example-client-server-with-mongodb.yml up --remove-orphans --build",
     "docker:example-client-server-with-mongodb:down": "docker-compose -f docker-compose.example-client-server-with-mongodb.yml down",
