Ignoring .angulardoc.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.angulardoc.json
+
 # Back-end
 back-end/javascript/apollo-server/apollo-tutorial/node_modules
 back-end/javascript/apollo-server/apollo-tutorial/.env
