Simplified Dockerfile for Apollo tutorial back-end server

--- a/back-end/javascript/apollo-server/apollo-tutorial/Dockerfile
+++ b/back-end/javascript/apollo-server/apollo-tutorial/Dockerfile
@@ -1,22 +1,12 @@
-FROM mhart/alpine-node:10
-
-# Add the bash shell
-RUN apk add --update bash && rm -rf /var/cache/apk/*
+FROM node:12-alpine
 
 # Create the app directory
 WORKDIR /app
 
 # Install dependencies
 COPY package.json ./
-RUN npm install
+RUN npm install --silent
 
 # Copy application code
 COPY . ./
 RUN chmod +x ./scripts/wait-for.sh
-
-# Expose our application and node debugger ports
-EXPOSE 4000
-EXPOSE 9229
-
-# Start our application
-CMD ["node", "index.js"]
