Simplified Dockerfile for Apollo tutorial front-end server

--- a/front-end/javascript/react/apollo-client/v2.6.x/apollo-tutorial/Dockerfile
+++ b/front-end/javascript/react/apollo-client/v2.6.x/apollo-tutorial/Dockerfile
@@ -1,20 +1,11 @@
-FROM mhart/alpine-node:10
-
-# Add the bash shell
-RUN apk add --update bash && rm -rf /var/cache/apk/*
+FROM node:12-alpine
 
 # Create the app directory
 WORKDIR /app
 
 # Install dependencies
-COPY package*.json ./
-RUN npm install
+COPY package.json ./
+RUN npm install --silent
 
 # Copy application code
 COPY . ./
-
-# Expose our application and node debugger ports
-EXPOSE 3000
-
-# Start our application
-CMD ["node", "index.js"]
