Simplified project root scripts to run newly organized examples only

--- a/package.json
+++ b/package.json
@@ -4,29 +4,14 @@
   "author": "Rob Brennan <rob@therobbrennan.com> (therobbrennan.com)",
   "description": "A starting point to explore GraphQL",
   "scripts": {
-    "start": "npm run docker:hasura-docker-quickstart:up",
-    "build": "npm run docker:hasura-docker-quickstart:up:clean",
-    "down": "npm run docker:hasura-docker-quickstart:down",
-    "docker:apollo-tutorial:up": "docker-compose -f docker-compose.apollo-tutorial.yml up",
-    "docker:apollo-tutorial:up:clean": "docker-compose -f docker-compose.apollo-tutorial.yml up --remove-orphans --build",
-    "docker:apollo-tutorial:down": "docker-compose -f docker-compose.apollo-tutorial.yml down",
-    "docker:apollo-tutorial-angular:up": "docker-compose -f docker-compose.apollo-tutorial-angular.yml up",
-    "docker:apollo-tutorial-angular:up:clean": "docker-compose -f docker-compose.apollo-tutorial-angular.yml up --remove-orphans --build",
-    "docker:apollo-tutorial-angular:down": "docker-compose -f docker-compose.apollo-tutorial-angular.yml down",
-    "docker:example-client-server-with-mongodb:up": "docker-compose -f docker-compose.example-client-server-with-mongodb.yml up",
-    "docker:example-client-server-with-mongodb:up:clean": "docker-compose -f docker-compose.example-client-server-with-mongodb.yml up --remove-orphans --build",
-    "docker:example-client-server-with-mongodb:down": "docker-compose -f docker-compose.example-client-server-with-mongodb.yml down",
-    "docker:example-client-server-with-postgresql:up": "docker-compose -f docker-compose.example-client-server-with-postgresql.yml up",
-    "docker:example-client-server-with-postgresql:up:clean": "docker-compose -f docker-compose.example-client-server-with-postgresql.yml up --remove-orphans --build",
-    "docker:example-client-server-with-postgresql:down": "docker-compose -f docker-compose.example-client-server-with-postgresql.yml down",
-    "docker:example-server-with-mongodb-and-postgres:up": "docker-compose -f docker-compose.example-server-using-mongodb-and-postgresql.yml up",
-    "docker:example-server-with-mongodb-and-postgres:up:clean": "docker-compose -f docker-compose.example-server-using-mongodb-and-postgresql.yml up --remove-orphans --build",
-    "docker:example-server-with-mongodb-and-postgres:down": "docker-compose -f docker-compose.example-server-using-mongodb-and-postgresql.yml down",
-    "docker:hasura-docker-quickstart:up": "docker-compose -f docker-compose.hasura-docker-quickstart.yml up",
-    "docker:hasura-docker-quickstart:up:clean": "docker-compose -f docker-compose.hasura-docker-quickstart.yml up --remove-orphans --build",
-    "docker:hasura-docker-quickstart:down": "docker-compose -f docker-compose.hasura-docker-quickstart.yml down",
-    "docker:nuke": "npm run docker:nuke:containers && docker rmi -f $(docker images -q)",
-    "docker:nuke:containers": "docker rm $(docker ps -aq)"
+    "build": "npm run start:clean",
+    "start": "npm run start:apollo-tutorial-react",
+    "start:clean": "npm run start:apollo-tutorial-react:clean",
+    "stop": "npm run stop:apollo-tutorial-react",
+    "start:apollo-tutorial-react": "cd examples/apollo-tutorial-react && npm start",
+    "start:apollo-tutorial-react:clean": "cd examples/apollo-tutorial-react && npm run build",
+    "stop:apollo-tutorial-react": "cd examples/apollo-tutorial-react && npm run stop",
+    "docker:nuke": "docker system prune -a && docker volume prune"
   },
   "keywords": [
     "graphql", "javascript", "front-end", "back-end", "apollo", "apollo-client", "apollo-server", "react", "mongo", "mongodb", "postgres", "postgresql", "mongoose", "knex"
