--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "description": "A starting point to explore GraphQL",
   "scripts": {
     "build": "npm run start:clean",
-    "start": "npm run start:apollo-tutorial-angular",
-    "start:clean": "npm run start:apollo-tutorial-angular:clean",
-    "stop": "npm run stop:apollo-tutorial-angular",
+    "start": "npm run start:client-server-with-mongodb",
+    "start:clean": "npm run start:client-server-with-mongodb:clean",
+    "stop": "npm run stop:client-server-with-mongodb",
     "start:apollo-tutorial-react": "cd examples/apollo-tutorial-react && npm start",
     "start:apollo-tutorial-react:clean": "cd examples/apollo-tutorial-react && npm run build",
     "stop:apollo-tutorial-react": "cd examples/apollo-tutorial-react && npm run stop",
     "start:apollo-tutorial-angular": "cd examples/apollo-tutorial-angular && npm start",
     "start:apollo-tutorial-angular:clean": "cd examples/apollo-tutorial-angular && npm run build",
     "stop:apollo-tutorial-angular": "cd examples/apollo-tutorial-angular && npm run stop",
+    "start:client-server-with-mongodb": "cd examples/client-server-with-mongodb && npm start",
+    "start:client-server-with-mongodb:clean": "cd examples/client-server-with-mongodb && npm run build",
+    "stop:client-server-with-mongodb": "cd examples/client-server-with-mongodb && npm run stop",
     "docker:nuke": "docker system prune -a && docker volume prune"
   },
   "keywords": [
