--- a/examples/hasura-docker-quickstart/docker-compose.yml
+++ b/examples/hasura-docker-quickstart/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.6'
 services:
   graphql-engine:
-    image: hasura/graphql-engine:v1.0.0-beta.10
+    image: hasura/graphql-engine:v1.0.0
     container_name: 'hasura-graphql-api'
     ports:
     - "8080:8080"
